Cambio del color del boton y cambio del titulo

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
   <div class="container">
-    <h1>Centro Odontológico Sonrisa Feliz</h1>
+    <h1>Centro Odontológico Dientes de Cristal</h1>
     <h2>Reserva tu cita en línea</h2>
 
     <form id="formulario-cita">
